# wgertrainer

./: pyproject.toml
src/: exercise_pick.py
tests/: test_websearch.py
