[tool.poetry]
name = "wgertrainer"
version = "0.1.0"
description = "Using Wger API to access various workouts,this is a package build to help you find the best exercise based on your input of muscle group and available equipment"
authors = ["Shuaitao Tan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
